# Guguk

./: .travis.yml  Guguk.cabal  README.md
src/: Guguk.hs
src/Guguk/: Hyphenation.hs  Phonetics.hs  Syllabification.hs  TurkishAlphabet.hs
src/Guguk/Morphology/: Phonetics.hs  Phonology.hs
src/Guguk/Syntax/: PosTagger.hs
src/Guguk/Tokenization/: SentenceBoundary.hs
src/Guguk/Tokenization/SentenceBoundary/: Ignore.hs
tests/: Main.hs  MorphologyPhonology.hs  Syllabification.hs  TurkishAlphabet.hs  tests.hs
tests/Tests/: Syllabification.hs  TurkishAlphabet.hs
tests/Tests/Morphology/: Phonology.hs
tests/Tests/Tokenization/: SentenceBoundary.hs
