name:                Guguk
version:             0.0.0.1
synopsis:            NLP library for Turkish
description:         NLP library for Turkish
homepage:            http://github.com/joom/Guguk
license:             MIT
license-file:        LICENSE
author:              Cumhur Korkut
maintainer:          cumhurkorkut@gmail.com
copyright:           2014, Cumhur Korkut
category:            Natural Language Processing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
source-repository head
  type:        git
  location:    git://github.com/joom/Guguk.git

library
  default-extensions:  OverloadedStrings
  exposed-modules:     Guguk
                     , Guguk.Syllabification
                     , Guguk.Phonetics
                     , Guguk.TurkishAlphabet
                     , Guguk.Morphology.Phonology
                     , Guguk.Tokenization.SentenceBoundary
                     , Guguk.Tokenization.SentenceBoundary.Ignore
                     , Guguk.Syntax.PosTagger
  build-depends:       base < 5
                     , text >= 1.1.1.0
                     , split >= 0.1
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite Tests
  default-extensions:  OverloadedStrings
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends: base,
                 Guguk,
                 HUnit >= 1.2.5.0
  Default-Language: Haskell2010
